Bionic ChangeLog:
-----------------

Differences between current and Android 2.1:

- Support FP register save/load in setjmp()/longjmp() on ARMv7 builds.

- Add support for SH-4 CPU architecture !

- __atomic_swap(): use LDREX/STREX CPU instructions on ARMv6 and higher.

- <arpa/telnet.h>: New header (declarations only, no implementation).

- <err.h>: New header + implementation. GLibc compatibility.

- <warn.h>: New header + implementation. GLibc compatibility.

- <fts.h>: New header + implementation.

- <mntent.h>: Add missing <stdio.h> include.

- <regex.h>: New header + implementation.

- <signal.h>: Added killpg()

- <stdint.h>: Allow 64-bit type declarations on C99 builds.

- <stdio.h>: Add fdprintf() and vfdprintf(). Note that GLibc provides
  the confusing 'dprintf' and 'vdprintf()' functions instead.

- <stdlib.h>: Fix ptsname_r(): the return type is int instead of char*.
  The mistake comes from a GLibc man page bug (the man page listed a return
  type of char*, while the implementation used int. Fixed in late 2009 only).
  The Bionic implementation was incorrect. Technically, this is an ABI
  breakage, but code that used this function probably never worked or
  compiled properly anyway.

- <strings.h>: Add missing <sys/types.h> include.

- <sys/queue.h>: Added new header (no implementation - macro templates).

- <sys/resource.h>: Add rlim_t proper definition.

- <time64.h>: Add missing C++ header inclusion guards.

- <unistd.h>: Add getusershell(), setusershell() and endusershell(), though
  implementation are bogus. GLibc compatibility.

- <wchar.h>: Add mbstowcs() and wcstombs()

- add clone() implementation for ARM (x86 and SH-4 not working yet).

- <sys/epoll.h>: <sys/system_properties.h>: Add missing C++ inclusion guards

- fix getpwnam() and getpwgrp() to accept "app_0" as a valid user name.

- fix sem_trywait() to return -1 and set errno to EAGAIN, instead of
  returning EAGAIN directly.
